--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,271 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+
+  --ft-standard: "Roboto", sans-serif;
+  --ft-fancy: "Barrio", system-ui;
+
+  --clr-primary: #003399;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+
+body {
+  font-family: var(--ft-standard);
+  line-height: 1.4;
+}
+
+
+
+
+
+/* Utils
+-------------------------------------*/
+
+
+/* Buttons */
+.button {
+  display: block;
+  cursor: pointer;
+  font-weight: 600;
+  border-radius: .5rem;
+  padding-block: .75rem;
+  padding-inline: 1.45rem;
+  background-color: #fff;
+  text-transform: uppercase;
+  border: 2px solid #c7c7c7;
+}
+
+.button-primary:hover {
+  color: #fff;
+  border: solid 2px #fff;
+  background-color: #333;
+  transition: all ease-in-out .3s;
+}
+
+.button-menu {
+  margin: 0;
+  padding: 0;
+  width: 20rem;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--clr-primary);
+  border: 2px solid var(--clr-primary);
+}
+
+.button-menu:hover {
+  color: #fff;
+  transition: all .2s ease-in-out;
+  background-color: var(--clr-primary);
+}
+
+
+/* Home Page
+-------------------------------------*/
+
+.home {
+  width: 100%;
+  height: 200vh;
+  max-width: 2400px;
+  position: relative;
+  background-color: #eee;
+}
+
+
+
+
+/* Side Navigation
+-------------------------------------*/
+
+.sidenav {
+  width: 20%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: #c7c7c7;
+  background-color: #00091a;
+}
+
+.sidenav .branding {
+  height: 4rem;
+  display: flex;
+  color: #fff;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  background-color: #003399;
+  border-bottom: 1px solid #fff;
+}
+
+.sidenav .sideMenuItems {
+  padding-inline: 2rem;
+  padding-block: 2rem;
+}
+
+.sidenav .sideMenuItems > div {
+  width: 100%;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.sidenav .sideMenuItems > div > i {
+  width: 3rem;
+  text-align: center;
+}
+
+
+/* Submenu
+-------------------------------------*/
+
+ul {
+  padding-inline: 4rem;
+  padding-top: 1rem;
+}
+
+.submenu-item > a {
+  color: #c7c7c7;
+}
+
+li.submenu-item {
+  list-style: square outside none;
+  display: block;
+  margin-left: 1rem;
+  margin-bottom: .5rem;
+}
+
+
+@media screen and (max-width: 1600px) {
+  
+  .submenu {
+    padding-inline: 2.5rem;
+    padding-top: .75rem;
+  }
+
+}
+
+
+/* Main Screen
+-------------------------------------*/
+
+.main {
+  width: 80%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.main .nav {
+  height: 4rem;
+  display: flex;
+  color: #333;
+  text-align: center;
+  align-items: center;
+  padding-inline: 2rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 80%;
+  background-color: #fff;
+  justify-content: space-between;
+  border-bottom: 1px solid #fff;
+}
+
+.main .main_content {
+  position: absolute;
+  top: 4rem;
+  right: 0;
+  padding-inline: 2rem;
+  padding-block: 2rem;
+  width: 100%;
+  height: calc(100vh - 4rem);
+}
+
+
+
+
+/* Outlets
+-------------------------------------*/
+.outlets {
+  height: 100%;
+  padding: 2rem;
+  background-color: #fff;
+}
+
+.outlet-header {
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #ccc;
+}
+
+.outlet-header img {
+  width: 10%;
+  height: 10%;
+  border-radius: 5px;
+  border: #333 solid 1px;
+  box-shadow: .5rem .5rem .5rem rgba(0, 0, 0, .5);
+}
+
+.outlet-header h1 {
+  font-size: 3rem;
+  margin-left: 3rem;
+  padding: 1rem;
+  color: var(--clr-primary);
+  font-family: var(--ft-fancy);
+  text-shadow: .2rem .2rem 1rem rgba(9, 9, 9, .8);
+}
+
+.outlet-description {
+  width: 100%;
+  display: flex;
+  margin: 2rem auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.outlet-description p {
+  font-size: 120%;
+  max-width: 80rem;
+  text-align: center;
+}
+
+.outlet-menus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #c7c7c7;
+}
+
+.outlet-menus > a {
+  margin-left: 1rem;
+}
+
+.outlet-timings {
+  width: 100%;
+  text-align: center;
+  padding-block: 2rem;
+}
+
+@media screen and (max-width: 1600px) {
+  
+  .outlet-header h1 {
+    font-size: 2.5rem;
+    padding: .5rem;
+  }
+
 }
